--- a/index.html
+++ b/index.html
@@ -5,14 +5,23 @@
     </head>
     <body>
         <h1 align="center">CV ONLINE</h1>
-        <img src="https://media.licdn.com/dms/image/D5603AQHgh6rBqBRCRg/profile-displayphoto-shrink_800_800/0/1691765321284?e=1701907200&v=beta&t=ybJzuYvA8FZK-8L4LhwKnZQt-YDQcUJ-C6LhuD7aySY" width="200" height="250" ="center">
+        <center> <img src="https://media.licdn.com/dms/image/D5603AQHgh6rBqBRCRg/profile-displayphoto-shrink_800_800/0/1691765321284?e=1701907200&v=beta&t=ybJzuYvA8FZK-8L4LhwKnZQt-YDQcUJ-C6LhuD7aySY" width="200" height="250"></center>
         <hr>
-        <h2> About me </h2>
-        <div>
-        <p> saya mahasiswa semester 5 Telkom University jurusan sistem informasi fakultas rekayasa indurstri saya tertarik dibidang <i>business development.<i></p>
-        <hr>
-        <h2>Riwayat Pendidikan</h2>
-<table>
+<h1>Tentang Saya</h1>
+<p>
+    Saya adalah seorang mahasiswa yang berdedikasi dan bersemangat dalam dunia <strong>Konsultasi</strong>. Saya memiliki pengalaman dua tahun dalam <strong>Business Development </strong> dan telah berhasil mengerjakan berbagai proyek yang kompleks dan menantang. Saya memiliki kemampuan komunikasi yang baik, mampu bekerja dalam tim, dan selalu berusaha untuk mencapai hasil terbaik.
+</p>
+<hr>
+<h2>Biodata Singkat</h2>
+<ul>
+    <li><strong>Nama:</strong> Nazwa Yaqzhania</li>
+    <li><strong>Alamat:</strong> New Zealand</li>
+    <li><strong>Nomor Telepon:</strong>085883431624</li>
+    <li><strong>Email:</strong> nanazimtyaz123@gmail.com</li>
+</ul>
+<hr>
+<h2>Riwayat Pendidikan</h2>
+<table border="1">
 <thead>
   <tr>
     <th>Tingkat Pendidikan</th>
@@ -20,18 +29,21 @@
     <th>Jurusan</th>
   </tr>
   <tr>
-    <td></td>
-    <td>Maria Anders</td>
-    <td>Germany</td>
-    <td>puh sepuh</td>
+    <td>SMP</td>
+    <td>SMPIT Mentari Ilmu</td>
+    <td>-</td>
   </tr>
   <tr>
-    <td>Centro comercial Moctezuma</td>
-    <td>Francisco Chang</td>
-    <td>Mexico</td>
-    <td>bojongsoang
+    <td>SMA</td>
+    <td>SMAN 1 Karawang</td>
+    <td>IPA</td>
+  </tr>
+  <tr>
+    <td>Kuliah</td>
+    <td>Telkom University</td>
+    <td>Sistem Informasi</td>
   </tr>
 </table>
-        
-    </body>
+
+</body>
 </html>
